# goph420-w2023-lab03-stEO

./: .gitignore  README.md  pyproject.toml
examples/: driver.py  tests.py
src/lab03/: regression.py
