[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab03"
version = "0.0.1"
authors = [
  { name="Obot Esther", email="esther.obot@ucalgary.ca" },
]
description = "multiple linear least square regression"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/esther-obot/goph420-w2023-lab03-stEO-main"

